Fixed overlapping issues with navigation bar

--- a/src/Components/Style/project.css
+++ b/src/Components/Style/project.css
@@ -26,7 +26,6 @@
         background-image: url("./Moviesample.png");
         width: 80vw;
         height: 30vh;
-        z-index: 0;
         border: 3px solid grey;
     }
 
@@ -34,7 +33,6 @@
         position: absolute;
         font-family: 'Nanum Pen Script', cursive;
         font-size: 15vw;
-        z-index: 2;
         letter-spacing: 0;
         margin-top: 10vh;
         margin-bottom: 0;
@@ -53,7 +51,6 @@
         margin-bottom: 0;
         font-size: 4vw;
         right: 0;
-        z-index: 2;
         background-color: orange;
         letter-spacing: 0;
     }
@@ -79,7 +76,6 @@
         background-size: 100%;
         width: 80vw;
         height: 30vh;
-        z-index: 0;
         border: 3px solid grey;
     }
 
@@ -103,7 +99,6 @@
         background-size: 100%;
         width: 80vw;
         height: 30vh;
-        z-index: 0;
         border: 3px solid grey;
     }
 
@@ -111,7 +106,6 @@
         position: absolute;
         font-family: 'Nanum Pen Script', cursive;
         font-size: 15vw;
-        z-index: 2;
         letter-spacing: 0;
         margin: 9vh 0 0 0;
         display: inline-block;
@@ -206,7 +200,6 @@
         background-image: url("./Moviesample.png");
         width: 80vw;
         height: 60vh;
-        z-index: 0;
         border: 3px solid grey;
     }
 
@@ -214,7 +207,6 @@
         position: absolute;
         font-family: 'Nanum Pen Script', cursive;
         font-size: 10em;
-        z-index: 2;
         letter-spacing: 0;
         margin: 20vh 0 0 0;
         display: inline-block;
@@ -231,7 +223,6 @@
         margin-bottom: 8.5em;
         bottom: 0;
         font-size: 2em;
-        z-index: 2;
         background-color: orange;
         letter-spacing: 0;
     }
@@ -257,7 +248,6 @@
         background-size: 100%;
         width: 80vw;
         height: 60vh;
-        z-index: 0;
         border: 3px solid grey;
     }
 
@@ -265,7 +255,6 @@
         position: absolute;
         font-family: 'Nanum Pen Script', cursive;
         font-size: 10em;
-        z-index: 2;
         letter-spacing: 0;
         margin: 20vh 0 0 0;
         display: inline-block;
@@ -280,7 +269,6 @@
         right: 0;
         margin-right: 20vh;
         font-size: 2em;
-        z-index: 2;
         background-color: orange;
         letter-spacing: 0;
     }
@@ -305,7 +293,6 @@
         background-size: 100%;
         width: 80vw;
         height: 60vh;
-        z-index: 0;
         border: 3px solid grey;
     }
 
